--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
